@@ -2,8 +2,6 @@ package uk.gov.hmcts.reform.roleassignment.domain.service.common;
 
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang.StringUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
@@ -59,8 +57,6 @@ import static uk.gov.hmcts.reform.roleassignment.data.RoleAssignmentEntitySpecif
 
 @Service
 public class PersistenceService {
-
-    private static final Logger logger = LoggerFactory.getLogger(PersistenceService.class);
 
     //1. StoreRequest which will insert records in request and history table with log,
     //2. Insert new Assignment record with updated Status in historyTable
@@ -134,11 +130,8 @@ public class PersistenceService {
 
         Set<HistoryEntity> historyEntities = historyRepository.findByReference(process, reference, status);
         //convert into model class
-        List<RoleAssignment> roleAssignmentList = historyEntities.stream().map(
-            persistenceUtil::convertHistoryEntityToRoleAssignment).collect(Collectors.toList());
-
-        return roleAssignmentList;
-
+        return historyEntities.stream()
+            .map(persistenceUtil::convertHistoryEntityToRoleAssignment).collect(Collectors.toList());
     }
 
     @Transactional
@@ -165,7 +158,7 @@ public class PersistenceService {
             Set<RoleAssignmentEntity> roleAssignmentEntities = roleAssignmentRepository.findByActorId(actorId);
             //convert into model class
             return roleAssignmentEntities.stream().map(persistenceUtil::convertEntityToRoleAssignment)
-                .collect(Collectors.toList());
+                .toList();
         } catch (Exception sqlException) {
             throw new UnprocessableEntityException("SQL Error get by actor id: "
                                                        + sqlException.getMessage());
@@ -297,14 +290,10 @@ public class PersistenceService {
             roleAssignmentList = PageHolder.holder.get().stream()
                 .map(persistenceUtil::convertEntityToRoleAssignment)
                 .collect(Collectors.toList());
-
-
         } else {
             roleAssignmentList = PageHolder.holder.get().stream()
                 .map(persistenceUtil::convertEntityToExistingRoleAssignment)
                 .collect(Collectors.toList());
-
-
         }
 
         return roleAssignmentList;
@@ -315,7 +304,7 @@ public class PersistenceService {
         if (roleAssignmentEntityOptional.isPresent()) {
             return roleAssignmentEntityOptional.stream()
                 .map(persistenceUtil::convertEntityToRoleAssignment)
-                .collect(Collectors.toList());
+                .toList();
         }
         return Collections.emptyList();
     }
